--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bicycle</title>
-<link href="/dist/css/styles.css" rel="stylesheet"></head>
+<link href="/dist/css/styles-1bb54b26.css" rel="stylesheet"></head>
 <body>
 <div id="content"></div>
-<script type="text/javascript" src="/dist/js/bundle.js"></script></body>
+<script type="text/javascript" src="/dist/js/bundle-1bb54b26.js"></script></body>
 </html>
