Change redirect scripts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bicycle</title>
     <script type="text/javascript">
         (function(l) {
-            const nonHomeUrls = ['/getting-started', '/css'];
+            const nonHomeUrls = [];
             for (let i = 0; i < nonHomeUrls.length; i++) {
                 const urlRegex = new RegExp(nonHomeUrls[i], 'i');
                 const verifyUrl = urlRegex.test(l.pathname);
@@ -32,8 +32,8 @@
             }
         }(window.location))
     </script>
-<link href="/dist/css/styles-421de7d3.css" rel="stylesheet"></head>
+<link href="/dist/css/styles-da117a7b.css" rel="stylesheet"></head>
 <body>
 <div id="content"></div>
-<script type="text/javascript" src="/dist/js/bundle-421de7d3.js"></script></body>
+<script type="text/javascript" src="/dist/js/bundle-da117a7b.js"></script></body>
 </html>
