--- a/404.html
+++ b/404.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bicycle</title>
     <script type="text/javascript">
-        var segmentCount = 1;
+        var segmentCount = 0;
         var l = window.location;
-        const nonHomeUrls = ['/snap-ninja', '/Headcount', '/comp-3', '/Centipede'];
+        const nonHomeUrls = ['/css'];
         for (let i = 0; i < nonHomeUrls.length; i++) {
             const urlRegex = new RegExp(nonHomeUrls[i], 'i');
             const verifyUrl = urlRegex.test(l.pathname);
