--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bicycle</title>
     <script type="text/javascript">
         (function(l) {
-            const nonHomeUrls = [];
+            const nonHomeUrls = ['/css'];
             for (let i = 0; i < nonHomeUrls.length; i++) {
                 const urlRegex = new RegExp(nonHomeUrls[i], 'i');
                 const verifyUrl = urlRegex.test(l.pathname);
@@ -32,8 +32,8 @@
             }
         }(window.location))
     </script>
-<link href="/dist/css/styles-b135f9ce.css" rel="stylesheet"></head>
+<link href="/dist/css/styles-e3a620df.css" rel="stylesheet"></head>
 <body>
 <div id="content"></div>
-<script type="text/javascript" src="/dist/js/bundle-b135f9ce.js"></script></body>
+<script type="text/javascript" src="/dist/js/bundle-e3a620df.js"></script></body>
 </html>
