--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
     <title>Bicycle</title>
     <script type="text/javascript">
         (function(l) {
-            const nonHomeUrls = [];
+            const nonHomeUrls = ['/css'];
             for (let i = 0; i < nonHomeUrls.length; i++) {
                 const urlRegex = new RegExp(nonHomeUrls[i], 'i');
                 const verifyUrl = urlRegex.test(l.pathname);
