--- a/index.html
+++ b/index.html
@@ -5,35 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bicycle</title>
-    <script type="text/javascript">
-        (function(l) {
-            const nonHomeUrls = ['/css'];
-            for (let i = 0; i < nonHomeUrls.length; i++) {
-                const urlRegex = new RegExp(nonHomeUrls[i], 'i');
-                const verifyUrl = urlRegex.test(l.pathname);
-                if (verifyUrl) {
-                    return;
-                }
-            }
+    <!--<script type="text/javascript">-->
+        <!--(function(l) {-->
+            <!--const nonHomeUrls = ['/css'];-->
+            <!--for (let i = 0; i < nonHomeUrls.length; i++) {-->
+                <!--const urlRegex = new RegExp(nonHomeUrls[i], 'i');-->
+                <!--const verifyUrl = urlRegex.test(l.pathname);-->
+                <!--if (verifyUrl) {-->
+                    <!--return;-->
+                <!--}-->
+            <!--}-->
 
-            if (l.search) {
-                var q = {};
-                l.search.slice(1).split('&').forEach(function(v) {
-                    var a = v.split('=');
-                    q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
-                });
-                if (q.p !== undefined) {
-                    window.history.replaceState(null, null,
-                        l.pathname.slice(0, -1) + (q.p || '') +
-                        (q.q ? ('?' + q.q) : '') +
-                        l.hash
-                    );
-                }
-            }
-        }(window.location))
-    </script>
-<link href="/dist/css/styles-e3a620df.css" rel="stylesheet"></head>
+            <!--if (l.search) {-->
+                <!--var q = {};-->
+                <!--l.search.slice(1).split('&').forEach(function(v) {-->
+                    <!--var a = v.split('=');-->
+                    <!--q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');-->
+                <!--});-->
+                <!--if (q.p !== undefined) {-->
+                    <!--window.history.replaceState(null, null,-->
+                        <!--l.pathname.slice(0, -1) + (q.p || '') +-->
+                        <!--(q.q ? ('?' + q.q) : '') +-->
+                        <!--l.hash-->
+                    <!--);-->
+                <!--}-->
+            <!--}-->
+        <!--}(window.location))-->
+    <!--</script>-->
+<link href="/dist/css/styles-9353867c.css" rel="stylesheet"></head>
 <body>
 <div id="content"></div>
-<script type="text/javascript" src="/dist/js/bundle-e3a620df.js"></script></body>
+<script type="text/javascript" src="/dist/js/bundle-9353867c.js"></script></body>
 </html>
