Change redirect scripts

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
         var segmentCount = 0;
         var l = window.location;
 
-        const nonHomeUrls = ['getting-started', 'css', 'components'];
+        const nonHomeUrls = ['/getting-started', '/css'];
 
         for (let i = 0; i < nonHomeUrls.length; i++) {
             const urlRegex = new RegExp(nonHomeUrls[i], 'i');
