--- a/404.html
+++ b/404.html
@@ -9,21 +9,27 @@
         var segmentCount = 0;
         var l = window.location;
 
-        const nonHomeUrls = ['/getting-started', '/css'];
+        l.replace(
+            l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+            l.pathname.split('/').slice(0, 1 + segmentCount).join('/') +
+            l.hash
+        )
 
-        for (let i = 0; i < nonHomeUrls.length; i++) {
-            const urlRegex = new RegExp(nonHomeUrls[i], 'i');
-            const verifyUrl = urlRegex.test(l.pathname);
-            if (!verifyUrl) {
-                l.replace(
-                    l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-                    l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?p=/' +
-                    l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-                    (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-                    l.hash
-                );
-            }
-        }
+        // const nonHomeUrls = ['/getting-started', '/css'];
+        //
+        // for (let i = 0; i < nonHomeUrls.length; i++) {
+        //     const urlRegex = new RegExp(nonHomeUrls[i], 'i');
+        //     const verifyUrl = urlRegex.test(l.pathname);
+        //     if (!verifyUrl) {
+        //         l.replace(
+        //             l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        //             l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?p=/' +
+        //             l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
+        //             (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        //             l.hash
+        //         );
+        //     }
+        // }
     </script>
 </head>
 </html>
