Change redirect scripts

--- a/404.html
+++ b/404.html
@@ -9,7 +9,8 @@
         var segmentCount = 0;
         var l = window.location;
 
-        l.replace('https://bicyclecss.github.io/css')
+        console.log('404');
+        l.replace('https://bicyclecss.github.io/css');
 
         // l.replace(
         //     l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
