--- a/404.html
+++ b/404.html
@@ -10,7 +10,11 @@
         var l = window.location;
 
         console.log('404');
-        l.replace('https://bicyclecss.github.io/css');
+        l.replace(
+            l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+            l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
+            l.hash
+        );
 
         // l.replace(
         //     l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
