--- a/404.html
+++ b/404.html
@@ -8,10 +8,9 @@
     <script type="text/javascript">
         var segmentCount = 0;
         var l = window.location;
-        
+
         l.replace(
-            l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-            l.pathname.split('/').slice(0, 1 + segmentCount).join('/') +
+            l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') + '/' +
             l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
             l.hash
         );
