--- a/404.html
+++ b/404.html
@@ -9,11 +9,16 @@
         var segmentCount = 0;
         var l = window.location;
 
-        l.replace(
+        console.log(
             l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') + '/' +
             l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
             l.hash
         );
+        // l.replace(
+        //     l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') + '/' +
+        //     l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
+        //     l.hash
+        // );
 
         // l.replace(
         //     l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
