--- a/404.html
+++ b/404.html
@@ -14,11 +14,11 @@
             l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
             l.hash
         );
-        // l.replace(
-        //     l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') + '/' +
-        //     l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-        //     l.hash
-        // );
+        l.replace(
+            l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') + '/' +
+            l.pathname +
+            l.hash
+        );
 
         // l.replace(
         //     l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
