--- a/404.html
+++ b/404.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bicycle</title>
     <script type="text/javascript">
-        var segmentCount = 0;
-        var l = window.location;
-        const nonHomeUrls = ['/getting-started', '/css', '/components'];
-        for (let i = 0; i < nonHomeUrls.length; i++) {
-            const urlRegex = new RegExp(nonHomeUrls[i], 'i');
-            const verifyUrl = urlRegex.test(l.pathname);
-            if (!verifyUrl) {
-                l.replace(
-                    l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-                    l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/' +
-                    l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-                    (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-                    l.hash
-                );
-            }
-        }
+        // var segmentCount = 0;
+        // var l = window.location;
+        // const nonHomeUrls = ['/getting-started', '/css', '/components'];
+        // for (let i = 0; i < nonHomeUrls.length; i++) {
+        //     const urlRegex = new RegExp(nonHomeUrls[i], 'i');
+        //     const verifyUrl = urlRegex.test(l.pathname);
+        //     if (!verifyUrl) {
+        //         l.replace(
+        //             l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        //             l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/' +
+        //             l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
+        //             (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        //             l.hash
+        //         );
+        //     }
+        // }
     </script>
 </head>
 <body>
