--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <script>
         sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='/REPO_NAME_HERE'">
+    <meta http-equiv="refresh" content="0;URL='/'">
 </head>
 <body>
 Page Not Found
