--- a/src/app.html
+++ b/src/app.html
@@ -5,33 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bicycle</title>
-    <!--<script type="text/javascript">-->
-        <!--(function(l) {-->
-            <!--const nonHomeUrls = ['/css'];-->
-            <!--for (let i = 0; i < nonHomeUrls.length; i++) {-->
-                <!--const urlRegex = new RegExp(nonHomeUrls[i], 'i');-->
-                <!--const verifyUrl = urlRegex.test(l.pathname);-->
-                <!--if (verifyUrl) {-->
-                    <!--return;-->
-                <!--}-->
-            <!--}-->
-
-            <!--if (l.search) {-->
-                <!--var q = {};-->
-                <!--l.search.slice(1).split('&').forEach(function(v) {-->
-                    <!--var a = v.split('=');-->
-                    <!--q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');-->
-                <!--});-->
-                <!--if (q.p !== undefined) {-->
-                    <!--window.history.replaceState(null, null,-->
-                        <!--l.pathname.slice(0, -1) + (q.p || '') +-->
-                        <!--(q.q ? ('?' + q.q) : '') +-->
-                        <!--l.hash-->
-                    <!--);-->
-                <!--}-->
-            <!--}-->
-        <!--}(window.location))-->
-    <!--</script>-->
+    <script>
+        (function(){
+            var redirect = sessionStorage.redirect;
+            delete sessionStorage.redirect;
+            if (redirect && redirect != location.href) {
+                history.replaceState(null, null, redirect);
+            }
+        })();
+    </script>
 </head>
 <body>
 <div id="content"></div>
